export const snapshot = {};

snapshot[`tests > tracks > name 1`] = `
"
🚀 cpp  100 exercises
"
`;

snapshot[`tests > tracks > name 2`] = `[]`;

snapshot[`tests > tracks > name: invalid 1`] = `
"
error: option '-e, --track <slug>' argument '?cpp' is invalid. Invalid slug ?cpp.

"
`;

snapshot[`tests > tracks > name: invalid 2`] = `[]`;

snapshot[`tests > tracks > joined 1`] = `
"
🚀 cpp        100 exercises
🧩 java 🔔 50/100 exercises
"
`;

snapshot[`tests > tracks > joined 2`] = `[]`;

snapshot[`tests > tracks > completed 1`] = `
"
🚀 cpp  100 exercises
"
`;

snapshot[`tests > tracks > completed 2`] = `[]`;

snapshot[`tests > tracks > all 1`] = `
"
🚀 cpp        100 exercises
🧩 java 🔔 50/100 exercises
🔒 php          0 exercises
"
`;

snapshot[`tests > tracks > all 2`] = `[]`;
